--- a/modulo3.html
+++ b/modulo3.html
@@ -161,8 +161,9 @@
             <ul id="menu">
                 <li><a href="htmlsonsaad.html">Início</a></li>
                 <li><a href="menu.html">Menu</a></li>
+                <li><a href="modulo1.html">Modulo I</a></li>
                 <li><a href="modulo2.html">Modulo II</a></li>
-                <li><a href="modulo3.html">Modulo III</a></li>
+                
             </ul>
         </nav>
     </header>
