--- a/esqueceulogin.html
+++ b/esqueceulogin.html
@@ -15,11 +15,11 @@
         body {
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
-            color: #f4f4f4;
+            color: #f4f4f4; /* Cor do texto ajustada para contraste com fundo escuro */
             display: flex;
             flex-direction: column;
             min-height: 100vh;
-            background-color: #333;
+            background-color: #333; /* Fundo escuro para o corpo da página */
         }
 
         header {
@@ -76,22 +76,23 @@
         main {
             flex: 1;
             padding: 20px;
-            background: #222;
-            color: #f4f4f4;
+            background: #222; /* Fundo escuro para a área principal */
+            color: #f4f4f4; /* Cor do texto ajustada para contraste com fundo escuro */
         }
 
         section {
             margin: 60px;
             padding: 20px;
-            background: #444;
+            background: #444; /* Fundo mais claro para seções */
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            margin: auto;
+            max-width: 500px; /* Limita a largura da seção */
+            margin-left: auto;
+            margin-right: auto;
         }
 
         h2, h3, h4 {
-            color: #f4f4f4;
+            color: #f4f4f4; /* Cor dos cabeçalhos ajustada para contraste com fundo escuro */
         }
 
         form {
@@ -101,11 +102,11 @@
 
         form input, form textarea {
             padding: 10px;
-            border: 1px solid #555;
+            border: 1px solid #555; /* Cor de borda ajustada para contraste */
             border-radius: 5px;
             width: 100%;
-            background-color: #333;
-            color: #f4f4f4;
+            background-color: #333; /* Fundo escuro para campos de formulário */
+            color: #f4f4f4; /* Cor do texto ajustada para contraste com fundo escuro */
         }
 
         form button {
@@ -119,14 +120,19 @@
         }
 
         form button:hover {
-            background-color: rgb(120, 150, 95);
+            background-color: rgb(120, 150, 95); /* Cor do botão ao passar o mouse */
         }
 
         footer {
-            background-color: #222;
-            color: #f4f4f4;
+            background-color: #222; /* Fundo escuro para o rodapé */
+            color: #f4f4f4; /* Cor do texto ajustada para contraste com fundo escuro */
             text-align: center;
             padding: 10px 0;
+        }
+
+        .center-text {
+            text-align: center;
+            margin-top: 20px;
         }
 
         @media (max-width: 768px) {
@@ -149,64 +155,41 @@
             }
         }
     </style>
+    <script>
+        function validateAndSubmit(event) {
+            const emailInput = document.getElementById('email');
+            if (emailInput.value) {
+                alert("E-mail enviado com sucesso!");
+            } else {
+                alert("Por favor, preencha o campo de e-mail.");
+                event.preventDefault(); // Impede o envio do formulário se o campo estiver vazio
+            }
+        }
+    </script>
 </head>
 <body>
     <!-- Cabeçalho do site -->
     <header>
-        <img src="Thon (2).jpg" alt="Logo">
+        <img src="Thon (2).jpg" alt="" />
         <nav>
             <div class="menu-toggle" onclick="toggleMenu()">
-                <span></span>
-                <span></span>
-                <span></span>
             </div>
             <ul id="menu">
-                <li><a href="htmlsonsaad.html">Início</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="login.html">Voltar para o Login</a></li>
             </ul>
         </nav>
     </header>
-
-    <!-- Seção principal -->
     <main>
         <section>
-            <h2>Inscreva-se</h2>
-            <form action="menu.html">
-                <label for="foto-perfil">Adicionar foto de perfil:</label>
-                <input type="file" id="foto-perfil" name="foto-perfil" accept="image/*">
-
-                <label for="nome">Nome completo:</label>
-                <input type="text" id="nome" name="nome" required>
-
-                <label for="email">Digite seu email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="senha">Digite sua senha:</label>
-                <input type="password" id="senha" name="senha" required>
-
-                <label for="confirmar-senha">Confirme sua senha:</label>
-                <input type="password" id="confirmar-senha" name="confirmar-senha" required>
-
-                <label for="mensagem">Tem algum comentário ou dúvida a respeito do curso? Escreva no espaço abaixo:</label>
-                <textarea id="mensagem" name="mensagem" required></textarea>
-
-                <p>Tem uma conta? Clique <a href="login.html" style="color: rgb(147, 184, 115); text-decoration: none; font-weight: bold;">aqui</a> para fazer login.</p>
-
-                <button type="submit">Enviar</button>
-            </form>
+            <div class="container">
+                <h2>Recuperar Login</h2>
+                <form action="login.html" method="post" onsubmit="validateAndSubmit(event)">
+                    <label for="email">Insira seu e-mail:</label>
+                    <input type="email" id="email" name="email" required>
+                    <button type="submit">Enviar</button>
+                </form>
+            </div>
         </section>
     </main>
-
-    <!-- Rodapé do site -->
-    <footer>
-        <p>&copy; 2024 WikiThon. Todos os direitos reservados.</p>
-    </footer>
-
-    <script>
-        function toggleMenu() {
-            const menu = document.getElementById('menu');
-            menu.classList.toggle('show');
-        }
-    </script>
 </body>
 </html>
