--- a/login.html
+++ b/login.html
@@ -81,11 +81,14 @@
         }
 
         section {
-            margin-bottom: 40px;
+            margin: 60px;
             padding: 20px;
             background: #444; /* Fundo mais claro para seções */
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            max-width: 500px; /* Limita a largura da seção */
+            margin-left: auto;
+            margin-right: auto;
         }
 
         h2, h3, h4 {
@@ -117,7 +120,7 @@
         }
 
         form button:hover {
-            background-color: rgb(147, 184, 115);
+            background-color: rgb(120, 150, 95); /* Cor do botão ao passar o mouse */
         }
 
         footer {
@@ -125,6 +128,11 @@
             color: #f4f4f4; /* Cor do texto ajustada para contraste com fundo escuro */
             text-align: center;
             padding: 10px 0;
+        }
+
+        .center-text {
+            text-align: center;
+            margin-top: 20px;
         }
 
         @media (max-width: 768px) {
@@ -167,22 +175,28 @@
 
     <!-- Seção principal -->
     <main>
-        <section style="margin: 60px 60px;">
+        <section>
             <h2>Faça login</h2>
             <form action="menu.html">
                 <label for="email">Digite seu email:</label>
                 <input type="email" id="email" name="email" required>
 
-                <label for="nome">Digite sua senha:</label>
-                <input type="text" id="nome" name="senha" required>
+                <label for="senha">Digite sua senha:</label>
+                <input type="password" id="senha" name="senha" required>
 
                 <label for="mensagem">Tem algum comentário ou dúvida a respeito do curso? Escreva no espaço abaixo:</label>
                 <textarea id="mensagem" name="mensagem" required></textarea>
 
-                <p>Não tem uma conta? Clique <a href="inscrição.html">aqui</a> para se cadastrar.></p>
-
                 <button type="submit">Enviar</button>
             </form>
+            <p class="center-text">
+                <a href="esqueceulogin.html" style="color: rgb(147, 184, 115); text-decoration: none; font-weight: bold;">
+                    Esqueci minha senha
+                </a>
+            </p>
+            <p class="center-text">
+                Não tem uma conta? Clique <a href="inscrição.html" style="color: rgb(147, 184, 115); text-decoration: none; font-weight: bold;">aqui</a> para se cadastrar.
+            </p>
         </section>
     </main>
 
